[gd_scene load_steps=8 format=2]

[ext_resource path="res://script/component/AnimatedSpriteEx.gd" type="Script" id=1]
[ext_resource path="res://asset/sprite/Player/frames/p1.tres" type="SpriteFrames" id=2]
[ext_resource path="res://asset/sprite/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://asset/audio/jump.wav" type="AudioStream" id=4]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 22.917
height = 3.08647

[sub_resource type="CapsuleShape2D" id=3]
radius = 22.4289
height = 47.5063

[node name="Player1" type="RigidBody2D"]
position = Vector2( 135.518, 191.316 )
collision_layer = 2
collision_mask = 5
mode = 2
physics_material_override = SubResource( 1 )
custom_integrator = true
contact_monitor = true
script = ExtResource( 3 )

[node name="AnimatedSpriteEx" type="AnimatedSprite" parent="."]
position = Vector2( -31.6198, -46.6444 )
frames = ExtResource( 2 )
animation = "stand"
playing = true
centered = false
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="BodyDuckCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0.0561218, 20.9692 )
shape = SubResource( 2 )

[node name="BodyCollision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="grounded" type="RayCast2D" parent="."]
position = Vector2( -0.594604, -3.97299 )
enabled = true
cast_to = Vector2( 0, 60 )
collision_mask = 2147483657

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
